# poker-trainer

./: .env.example  .gitignore  CLAUDE.md  README.md  backend.test.ts  biome.json  docker-compose.yml  openapi-ts.config.ts  package.json  tsconfig.base.json
apps/api/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_drills.py
apps/api/app/: config.py  main.py
apps/api/app/models/: __init__.py  drill.py
apps/api/app/routers/: drills.py
apps/api/app/schemas/: __init__.py  drill.py
apps/api/scripts/: docker-entrypoint-dev.sh  print_model_ddl.py
apps/api/tests/: conftest.py  test_drills.py
apps/mobile/: .env.example  App.tsx  app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/(tabs)/: _layout.tsx  index.tsx  leaderboard.tsx  profile.tsx  tools.tsx
apps/mobile/app/train/: preflop.tsx
apps/mobile/components/features/: DrillCard.tsx  LeaderboardRow.tsx  PreflopChart.tsx  ProfileHeader.tsx
apps/mobile/components/layout/: ScreenWrapper.tsx
apps/mobile/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Divider.tsx  IconCard.tsx  ListRow.tsx  StatRow.tsx  Typography.tsx  index.ts
apps/mobile/theme/: ThemeContext.tsx  theme.ts
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: main.tsx  routeTree.tsx  routes.tsx  styles.css
apps/web/src/components/: Layout.tsx
apps/web/src/pages/: DrillsPage.tsx  HomePage.tsx  LandingPage.tsx  (+1 more)
docs/: db-migrations.md
scripts/: codegen.ts
